--- a/templates/index.html
+++ b/templates/index.html
@@ -1,142 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Theme Made By www.w3schools.com - No Copyright -->
+    <title>Bootstrap Theme Simply Me</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script> -->
-  <style>
-    body {
-      font: 20px Montserrat, sans-serif;
-      line-height: 1.8;
-      color: #f5f6f7;
-    }
+    <style>
+      body {
+        font: 20px Montserrat, sans-serif;
+        line-height: 1.8;
+        color: #f5f6f7;
+      }
 
-    p {
-      font-size: 16px;
-    }
+      p {
+        font-size: 16px;
+      }
 
-    .margin {
-      margin-bottom: 45px;
-    }
+      .margin {
+        margin-bottom: 45px;
+      }
 
-    .bg-1 {
-      background-color: #1abc9c;
-      /* Green */
-      color: #ffffff;
-    }
+      .bg-1 {
+        background-color: #1abc9c;
+        /* Green */
+        color: #ffffff;
+      }
 
-    .bg-2 {
-      background-color: #474e5d;
-      /* Dark Blue */
-      color: #ffffff;
-    }
+      .bg-2 {
+        background-color: #474e5d;
+        /* Dark Blue */
+        color: #ffffff;
+      }
 
-    .bg-3 {
-      background-color: #ffffff;
-      /* White */
-      color: #555555;
-    }
+      .bg-3 {
+        background-color: #ffffff;
+        /* White */
+        color: #555555;
+      }
 
-    .bg-4 {
-      background-color: #2f2f2f;
-      /* Black Gray */
-      color: #fff;
-    }
+      .bg-4 {
+        background-color: #2f2f2f;
+        /* Black Gray */
+        color: #fff;
+      }
 
-    .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
-    }
+      .container-fluid {
+        padding-top: 70px;
+        padding-bottom: 70px;
+      }
 
-    .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-    }
+      .navbar {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        border: 0;
+        border-radius: 0;
+        margin-bottom: 0;
+        font-size: 12px;
+        letter-spacing: 5px;
+      }
 
-    .navbar-nav li a:hover {
-      color: #1abc9c !important;
-    }
-  </style>
-</head>
+      .navbar-nav li a:hover {
+        color: #1abc9c !important;
+      }
+    </style>
+  </head>
 
-<body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">WEB PSICOLOGI-DEM</a>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">WEB PSICOLOGI-DEM</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://www.ups.edu.ec/">UPS</a></li>
+            <li><a href="pagina2.html">Grount true</a></li>
+            <!--<li><a href="#">WHERE</a></li> -->
+          </ul>
+        </div>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://www.ups.edu.ec/">UPS</a></li>
-          <li><a href="pagina2.html">Grount true</a></li>
-          <!--<li><a href="#">WHERE</a></li> -->
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- First Container -->
-  <div class="container-fluid bg-1 text-center">
-    <h3 class="margin">CATEGORIZACIÓN DE CONCEPTOS DE DEMENCIA</h3>
-    <img src="{{url_for('static',filename='img/demencia.png')}}" class="img-responsive img-circle margin"
-      style="display:inline" alt="Bird" width="350" height="350">
+    <!-- First Container -->
+    <div class="container-fluid bg-1 text-center">
+      <h3 class="margin">CATEGORIZACIÓN DE CONCEPTOS DE DEMENCIA</h3>
+      <img
+        src="{{url_for('static',filename='img/demencia.png')}}"
+        class="img-responsive img-circle margin"
+        style="display: inline;"
+        alt="Bird"
+        width="350"
+        height="350"
+      />
 
-<!--     <p> <br> demencia es un síndrome que implica el deterioro de la memoria,<br>
+      <!--     <p> <br> demencia es un síndrome que implica el deterioro de la memoria,<br>
       el intelecto, el comportamiento y la capacidad para realizar actividades de la vida diaria. </p> -->
 
-    <div class="container">
-      <div class='form-group'>
+      <div class="container">
         <div class="form-group">
-          <label for="inputText" class='form-label'>Ingrese su definición de demencia</label>
-          <textarea class="form-control" name='inputText' id="inputText" rows="5"></textarea>
-          <!-- <div id="textHelp" class="form-text">Ingrese un parrafo en kichwa</div> -->
+          <div class="form-group">
+            <label for="inputText" class="form-label"
+              >Ingrese su definición de demencia</label
+            >
+            <textarea
+              class="form-control"
+              name="inputText"
+              id="inputText"
+              rows="5"
+            ></textarea>
+            <!-- <div id="textHelp" class="form-text">Ingrese un parrafo en kichwa</div> -->
+          </div>
+          <div class="form-group">
+            <button
+              type="button"
+              id="btn-predic"
+              onclick="predicttext()"
+              class="btn btn-danger"
+            >
+              Procesar
+            </button>
+          </div>
         </div>
-        <div class="form-group">
-          <button type='button' id="btn-predic" onclick="predicttext()" class='btn btn-danger'>Procesar</button>
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <!-- Second Container -->
-  <div class="container-fluid bg-2 text-center" id='similitudJC' hidden='true'>
-  </div>
+    <!-- Second Container -->
+    <div
+      class="container-fluid bg-2 text-center"
+      id="similitudJC"
+      hidden="true"
+    ></div>
+    <div id="myModal" class="modal modal-fullscreen fade" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content" style="background-color: transparent;">
+          <div class="modal-body text-center" style="margin-top: 30%;">
+            <div
+              class="loader"
+              style="margin-left: auto; margin-right: auto;"
+            ></div>
+            <p style="color: white;">Cargando...</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <div class="container-fluid bg-3 text-center" id='nlp_text' hidden='true'>
-
-  </div>
-
-  <!-- Footer -->
-  <footer class="container-fluid bg-4 text-center">
-     <h3 class="margin">Cálculo de Similitudes y Tipo de Enfoque</h3>
-    <p>UPS <a href="https://www.ups.edu.ec/">www.ups.edu.ec</a></p>
-  </footer>
-
-</body>
-<script src="{{url_for('static',filename='js/app.js')}}"></script>
-
+    <!-- Footer -->
+    <footer class="container-fluid bg-4 text-center">
+      <h3 class="margin">Cálculo de Similitudes y Tipo de Enfoque</h3>
+      <p>UPS <a href="https://www.ups.edu.ec/">www.ups.edu.ec</a></p>
+    </footer>
+  </body>
+  <script src="{{url_for('static',filename='js/app.js')}}"></script>
 </html>
-
-
-
