--- a/templates/index.html
+++ b/templates/index.html
@@ -152,6 +152,12 @@
       id="similitudJC"
       hidden="true"
     ></div>
+    <!-- Second Container -->
+    <!-- <div
+      class="container-fluid"
+      id="predictJC"
+      hidden="true"
+    ></div> -->
 
     <!-- Footer -->
     <footer class="container-fluid bg-4 text-center">
